fixed circles on mobile

--- a/docroot/themes/humsci/su_humsci_theme/scss/paragraphs/hs_carousel.scss
+++ b/docroot/themes/humsci/su_humsci_theme/scss/paragraphs/hs_carousel.scss
@@ -70,6 +70,7 @@
       padding: 15px;
       border-radius: 15px;
       font-size: 0;
+      width: auto;
 
       @media(min-width: 976px) {
         background: #fff;
